@@ -1,5 +1,10 @@
 ==
 
+* Messages are marked unread after a delay (default 2 sec) in
+  thread-view. They can be manually toggled with 'N'.
+
+* Use Tab and S-Tab to jump between unread messages in thread-view.
+
 * Open element with 'Space', also in editor.
 
 * Yank raw or decoded message or element to primary clipboard with 'Y'
